fix: hamburger button won't overlap banner

--- a/src/App.css
+++ b/src/App.css
@@ -311,7 +311,7 @@ body img {
   border: black solid 0.1em;
   padding-bottom: 1em;
   position: absolute;
-  top: 10vh;
+  top: max(10vh, 11ch);
 }
 
 .bigProject {
